--- a/projects/01_hotel_website/about.html
+++ b/projects/01_hotel_website/about.html
@@ -7,6 +7,11 @@
     <meta name="description" content="Welcome to an awsome hotel in Boston" />
     <meta name="keywords" content="hotel,boston" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
     <title>Hotel BT | About</title>
   </head>
   <body>
