--- a/projects/01_hotel_website/index.html
+++ b/projects/01_hotel_website/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css" />
     <title>Hotel BT | Welcome</title>
   </head>
   <body>
