css grid practice

--- a/2_CSS_sandbox/28_grid_columns.html
+++ b/2_CSS_sandbox/28_grid_columns.html
@@ -43,7 +43,7 @@
 
     <main>
       <section>
-        <h3>Helo World!</h3>
+        <h3>Hello World!</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident
           atque ab similique quos aspernatur tempora officiis debitis delectus
