--- a/projects/03_presentation_website/index.html
+++ b/projects/03_presentation_website/index.html
@@ -88,7 +88,7 @@
       </div>
     </section>
 
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
@@ -108,6 +108,6 @@
           );
         }
       });
-    </script>
+    </script> -->
   </body>
 </html>
