--- a/Vue3_Udemy_NetNinja/test.html
+++ b/Vue3_Udemy_NetNinja/test.html
@@ -10,10 +10,14 @@
 
     <div id="app">
       <p>{{ title }} - by {{ author }}, {{ age }} years old</p>
+
+      <button @click="age++">Increase age</button>
+      <button v-on:click="age--">Decrease age</button>
+      <div @click="changeTitle('tesst')">Change title</div>
     </div>
 
     <!-- does not work -->
-    {{ title }}
+    <!-- {{ title }} -->
 
     <script src="app.js"></script>
   </body>
