--- a/Vue3_Udemy_NetNinja/test.html
+++ b/Vue3_Udemy_NetNinja/test.html
@@ -5,13 +5,31 @@
     <title>Learning Vue</title>
     <script src="https://unpkg.com/vue@3.0.0"></script>
     <style>
-      .box {
-        padding: 100px 0;
-        width: 400px;
-        text-align: center;
-        background: #ddd;
-        margin: 20px;
-        display: inline-block;
+      body {
+        background: #eee;
+        max-width: 960px;
+        margin: 20px auto;
+      }
+      p,
+      h3,
+      ul {
+        margin: 0;
+        padding: 0;
+      }
+      li {
+        list-style-type: none;
+        background: #fff;
+        margin: 20px auto;
+        padding: 10px 20px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        cursor: pointer;
+      }
+      li.fav {
+        background: #ff9ed2;
+        color: white;
       }
     </style>
   </head>
@@ -20,7 +38,13 @@
 
     <div id="app">
       <div v-if="showBooks">
-        <p>{{ title }} - by {{ author }}, {{ age }} years old</p>
+        <ul>
+          <li v-for="book in books" :class="{ fav: book.isFav }" @click="toggleFav(book)">
+            <img :src="book.img" :alt="book.title" />
+            <h3>{{ book.title }}</h3>
+            <p>{{ book.author }}</p>
+          </li>
+        </ul>
       </div>
       <div v-else>
         <p>Click the button below to show books</p>
@@ -30,13 +54,6 @@
         <span v-if="showBooks">Hide books</span>
         <span v-else>Show books</span>
       </button>
-
-      <br />
-      <!-- mouse events -->
-      <div class="box" @mouseover="handleEvent($event, 5)">mouseover (enter)</div>
-      <div class="box" @mouseleave="handleEvent">mouseleave</div>
-      <div class="box" @dblclick="handleEvent">double click me</div>
-      <div class="box" @mousemove="handleMousemove">position {{ x }} {{ y }}</div>
     </div>
 
     <script src="app.js"></script>
